apps/gitlab/networkpolicies/ingress-gitlab.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-gitlab
  namespace: gitlab
spec:
  selector: release == 'gitlab'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == 'traefik'
        selector: app.kubernetes.io/instance == 'traefik'
      destination:
        selector: app == 'webservice'
        ports:
          - 8080
          - 8181
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == 'traefik'
        selector: app.kubernetes.io/instance == 'traefik'
      destination:
        selector: app == 'registry'
        ports:
          - 5000
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == 'traefik'
        selector: app.kubernetes.io/instance == 'traefik'
      destination:
        selector: app == 'minio'
        ports:
          - 9000
    - action: Allow
      protocol: TCP
      source:
        selector: job == 'gitlab-backup-mirror'
      destination:
        selector: app == 'minio'
        ports:
          - 9000
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == 'traefik'
        selector: app.kubernetes.io/instance == 'traefik'
      destination:
        selector: app == 'gitlab-shell'
        ports:
          - 2222
    - action: Allow
      protocol: TCP
      source:
        selector: >-
          release == 'gitlab' ||
          release == 'gitlab-runner'
    - action: Allow
      protocol: UDP
      source:
        selector: >-
          release == 'gitlab' ||
          release == 'gitlab-runner'
